--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(FSD C)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_COMPILER /usr/local/bin/mpicc)
 
-add_executable(FSD main.c source.c source.h utils.c utils.h interm.c interm.h sink.c sink.h)
+add_executable(FSD main.c source.c source.h utils.c utils.h interm.c interm.h sink.c sink.h comms.c comms.h)
